<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">The Moon</string>
    <string name="launch_bottom_text"> www.baiqing.work </string>
    <string name="shelf_fragment">书架</string>
    <string name="library_fragment">图书馆</string>
    <string name="user_fragment">我的</string>
    <string name="https_host">https://www.baiqing.work</string>
    <string name="anti_hijacking_tips_home">TheMoon切换至后台运行</string>
    <string name="anti_hijacking_tips">TheMoon切换至后台运行</string>
    <string name="register">新用户注册</string>
    <string name="day">日间</string>
    <string name="night">夜间</string>
    <string name="chapter_list">【目录】</string>

    <string name="positive_sort">正序</string>
    <string name="inverted_sort">倒序</string>


    <string name="font_using">正在使用</string>
    <string name="font_example">庆</string>
    <string name="font_use">立即使用</string>

    <string name="font">字体</string>

    <string name="tip">提示</string>
    <string name="item_category_category_name">热血玄幻</string>
    <string name="item_category_more">更多玄幻小说</string>
    <string name="item_category_novel_name">小说名</string>
    <string name="item_category_local_network">在线搜索</string>
    <string name="item_category_local_local">本地图书</string>
    <string name="download_no_add_tips">缓存书籍需要先加入书架，您确定要添加本书到书架吗？</string>

    <string name="download_already_all_tips">书籍已经缓存整本！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_err">服务器太慢了，稍后再试一次</string>

    <!-- item_novel_source -->
    <string name="item_novel_source_name">斗破苍穹之无上之境</string>
    <string name="item_novel_source_author">夜雨闻铃0</string>
    <string name="item_novel_source_introduce">你常说，复仇才是我的使命，但你却不知道，守护你，才是我一生的宿命\n等级制度：斗帝、斗仙、斗神、帝之不朽\n各位书友要是觉得《斗破苍穹之无上之境》还不错的话请不要忘记向您QQ群和微博里的朋友推荐哦！</string>
    <string name="item_novel_source_web_site">https://www.xbiquge6.com/0_657/</string>
</resources>
