<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/tab_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/transparent">
        <TextView
            android:id="@+id/txt_top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/text_gray"
            android:text= "@string/app_name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/text_gray"
            android:layout_alignParentBottom="true"/>
        <RelativeLayout
            android:id="@+id/rl_edit_titile"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="编辑"
                android:layout_centerInParent="true"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tv_edit_finish"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:textSize="16sp"
                android:text="完成"/>


        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tab_menu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/txt_shelf"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_background"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_menu_shelf"
            android:gravity="center"
            android:textColor="@drawable/tab_menu_shelf_text"
            android:text="@string/shelf_fragment"/>

        <TextView
            android:id="@+id/txt_library"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_background"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_menu_library"
            android:gravity="center"
            android:textColor="@drawable/tab_menu_library_text"
            android:text="@string/library_fragment"/>

        <TextView
            android:id="@+id/txt_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_menu_background"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_menu_user"
            android:gravity="center"
            android:textColor="@drawable/tab_menu_user_text"
            android:text="@string/user_fragment"/>



    </LinearLayout>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/text_gray"
        android:layout_above="@id/tab_menu"/>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_title"
        android:layout_above="@id/tab_menu"
        android:background="@color/transparent">
    </FrameLayout>

</RelativeLayout>
