<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/iv_novel_intro_top_image_bg"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@mipmap/default_cover"
        android:scaleType="centerCrop"
        android:foreground="@color/novel_intro_top_image_bg_fg" />
    <!-- top_navi_bar -->

    <ImageView
        android:id="@+id/ll_title_back"
        android:layout_width="@dimen/novel_intro_top_navi_bar_height"
        android:layout_height="@dimen/novel_intro_top_navi_bar_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="13dp"
        android:src="@mipmap/novel_intro_back"
        android:layout_marginTop="@dimen/novel_intro_top_navi_bar_margin_top"/>

    <ImageView
        android:id="@+id/iv_novel_intro_menu"
        android:layout_width="@dimen/novel_intro_top_navi_bar_height"
        android:layout_height="@dimen/novel_intro_top_navi_bar_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="9dp"
        android:src="@mipmap/novel_intro_menu"
        android:layout_marginTop="@dimen/novel_intro_top_navi_bar_margin_top"/>


    <ImageView
        android:id="@+id/iv_book_img"
        android:layout_width="110dp"
        android:layout_height="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_title_back"
        android:layout_marginStart="@dimen/novel_intro_margin_start_and_end"
        android:layout_marginTop="10dp"
        android:src="@mipmap/default_cover"
        android:scaleType="fitXY"/>
    <TextView
        android:id="@+id/tv_book_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_book_img"
        app:layout_constraintTop_toBottomOf="@id/ll_title_back"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/novel_intro_text_margin_start_to_cover"
        android:text="@string/item_novel_source_name"
        android:textColor="@color/novel_intro_novel_name_text"
        android:textSize="18sp"
        android:maxLines="1"
        android:maxLength="10"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/tv_book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_book_img"
        app:layout_constraintTop_toBottomOf="@id/tv_book_name"
        android:layout_marginTop="5dp"
        android:layout_marginStart="@dimen/novel_intro_text_margin_start_to_cover"
        android:text="@string/item_novel_source_author"
        android:textColor="@color/novel_intro_novel_author_text"
        android:textSize="14sp"
        android:maxLines="1"
        android:maxLength="10"
        android:ellipsize="end"/>
    <TextView
        android:id="@+id/tv_book_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iv_book_img"
        app:layout_constraintTop_toBottomOf="@id/tv_book_author"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="@dimen/novel_intro_text_margin_start_to_cover"
        android:layout_marginEnd="30dp"
        android:text="@string/item_novel_source_web_site"
        android:textColor="@color/novel_intro_novel_web_site_text"
        android:gravity="start"
        android:textSize="14sp"
        android:maxLines="1"
        android:ellipsize="end"/>
    <View
        android:id="@+id/v_novel_intro_line_between_cover_and_introduce"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_book_img"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/novel_intro_margin_start_and_end"
        android:layout_marginEnd="@dimen/novel_intro_margin_start_and_end"
        android:background="@color/novel_intro_line_between_cover_and_introduce"/>

    <TextView
        android:id="@+id/tv_book_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_novel_intro_line_between_cover_and_introduce"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/novel_intro_margin_start_and_end"
        android:layout_marginEnd="@dimen/novel_intro_margin_start_and_end"
        android:layout_marginTop="10dp"
        android:text="@string/item_novel_source_introduce"
        android:textSize="14sp"
        android:maxLines="3"/>
    <ImageView
        android:id="@+id/iv_novel_intro_more_introduce"
        android:layout_width="15dp"
        android:layout_height="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_book_desc"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/novel_intro_margin_start_and_end"
        android:src="@mipmap/novel_intro_more_introduce"
        android:padding="1dp"/>
    <View
        android:id="@+id/v_novel_intro_separate_line"
        android:layout_width="0dp"
        android:layout_height="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_novel_intro_more_introduce"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:background="@color/novel_intro_separate_line"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/ll_novel_button_to_read"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_novel_intro_separate_line"
        >
        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/chapter_load"
            style="@style/SpinKitView.Large.FadingCircle"
            android:layout_centerInParent="true"
            android:layout_width="60dp"
            android:layout_height="60dp" />
        <android.support.v7.widget.RecyclerView
            android:id="@+id/lv_book_info_chapter_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start">

        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_novel_button_to_read"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/novel_intro_margin_start_and_end"
        android:layout_marginEnd="@dimen/novel_intro_margin_start_and_end"
        android:layout_marginBottom="10dp"
        android:textSize="14sp"
        android:maxLines="3">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_add_bookcase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="加入书架"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_read_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:background="@drawable/check_border"
                android:text="立即阅读"/>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
